--- a/ethnode/webui/mixins/modals/new-modals/add-education.jade
+++ b/ethnode/webui/mixins/modals/new-modals/add-education.jade
@@ -1,4 +1,4 @@
-#add-education.modal-box.flex.floating
+#add-education.add.modal-box.flex.floating
 
     .modal-box-content: .inner-modal: .content
 
