--- a/ethnode/webui/mixins/modals/new-modals/edit-education.jade
+++ b/ethnode/webui/mixins/modals/new-modals/edit-education.jade
@@ -1,4 +1,4 @@
-#edit-education.modal-box.flex.floating
+#edit-education.edit.modal-box.flex.floating
 
     .modal-box-content: .inner-modal: .content
 
