--- a/ethnode/webui/mixins/modals/new-modals/edit-job.jade
+++ b/ethnode/webui/mixins/modals/new-modals/edit-job.jade
@@ -1,4 +1,4 @@
-#edit-job.modal-box.flex.floating
+#edit-job.edit.modal-box.flex.floating
 
     .modal-box-content: .inner-modal: .content
         //- button.mdl-button.mdl-js-button.mdl-button--fab.mdl-button--mini-fab.mdl-button--colored.close-button.close-modal-button: i.material-icons close
