--- a/ethnode/webui/styles/panel-body.sass
+++ b/ethnode/webui/styles/panel-body.sass
@@ -309,38 +309,38 @@
                     margin-top: 50px
                     text-align: center
 
-                .ui
-                    padding: 6px 10px
-                    padding-right: 26px
-                    border-radius: 5px
-                    background-color: transparent
-                    border: 1px solid #dadada
-                    box-shadow: 0px 0px 3px #eaeaea
-                    position: relative
-                    transition: all 0.3s ease 0s
-                    top: 0
-                    display: inline-block
-                    margin-top: 5px
-                    float: left
+                // .ui
+                //     padding: 6px 10px
+                //     padding-right: 26px
+                //     border-radius: 5px
+                //     background-color: transparent
+                //     border: 1px solid #dadada
+                //     box-shadow: 0px 0px 3px #eaeaea
+                //     position: relative
+                //     transition: all 0.3s ease 0s
+                //     top: 0
+                //     display: inline-block
+                //     margin-top: 5px
+                //     float: left
 
-                    &:hover
-                        background-color: #f5f5f5
-                        box-shadow: 0px 0px 10px #eaeaea
-                        top: -5px
+                //     &:hover
+                //         background-color: #f5f5f5
+                //         box-shadow: 0px 0px 10px #eaeaea
+                //         top: -5px
 
 
-                    img
-                        width: 35px
-                        height: 35px
-                        border-radius: 100%
-                        float: left
-                        margin-top: 0
+                //     img
+                //         width: 35px
+                //         height: 35px
+                //         border-radius: 100%
+                //         float: left
+                //         margin-top: 0
 
-                    span
-                        line-height: 35px
-                        color: #86939e
-                        position: relative
-                        left: 10px
+                //     span
+                //         line-height: 35px
+                //         color: #86939e
+                //         position: relative
+                //         left: 10px
 
 
         .sharing
