--- a/ethnode/webui/styles/panel-heading.sass
+++ b/ethnode/webui/styles/panel-heading.sass
@@ -1,6 +1,3 @@
-.educations .education .education-description .dropdown.more img
-    margin-right: 25px
-
 .panel-group
     margin: 0
 
@@ -34,11 +31,8 @@
         margin-bottom: 0
         text-transform: uppercase
 
-.job, .story, .education
-    cursor: pointer
 
-
-.job, .story, .shoutout, .education
+.content-block
     padding-top: 24px
     padding-left: 0
     padding-right: 0
@@ -68,11 +62,6 @@
                 border: 1px solid #0065cc
                 display: none
 
-        img.story-image
-            margin-left: 25px
-
-        img.shoutout-image
-            border-radius: 100%
 
         .position-information
             margin-left: 100px
@@ -94,12 +83,6 @@
                 margin-bottom: 9px
                 font-weight: 400
 
-            h5.shoutout-position
-                font-size: 12px
-                line-height: 1.17
-                color: #86939e
-                margin-top: 0
-                margin-bottom: 7px
 
             p
                 font-size: 12px
@@ -109,10 +92,6 @@
                 margin-bottom: 0
 
 
-            p.shoutout-information-related
-                font-weight: 500
-                margin-bottom: 5px
-                text-align: left
 
             p.shoutout-business
                 white-space: nowrap
@@ -123,7 +102,7 @@
                     left: 5px
                     font-size: 12px
 
-    .job-description, .story-description, .shoutout-description, .education-description, .main-description
+    .main-description
         padding-right: 0
         padding-left: 0
         margin-bottom: 25px
@@ -165,6 +144,8 @@
                             color: #127fff
                             background-color: #edf3fa
 
+
+
         h4
             font-size: 16px
             font-weight: 500
@@ -172,11 +153,6 @@
             color: #43484d
             margin-top: 0
             margin-right: 105px
-
-        p.story-paragraph
-            margin: 0
-            margin-right: 85px
-            margin-bottom: 15px
 
         p.education-paragraph
             margin-right: 40px
@@ -191,22 +167,6 @@
             margin-right: 45px
             margin-bottom: 15px
 
-        p.shoutout-paragraph
-            font-size: 16px
-            color: #43484d
-            line-height: 1.6
-            margin-right: 60px
-            margin-bottom: 30px
-            margin-left: 20px
-
-        p.shoutout-paragraph.date
-            margin-bottom: 0
-            margin-top: -20px
-            font-weight: 400
-            float: right
-            margin-right: 40px
-            color: #86939e
-
         span
             border-radius: 3px
             font-weight: 500
@@ -219,6 +179,3 @@
             color: #d1a252
             float: right
             margin-right: 30px
-
-    .job-description .more img
-        margin-right: 30px
