--- a/ethnode/webui/mixins/modals/new-modals/add-education.jade
+++ b/ethnode/webui/mixins/modals/new-modals/add-education.jade
@@ -17,10 +17,10 @@
         .modal-body
 
             .form-group
-                input.input-file#input-image-job(type="file", placeholder="Add image or video")
-                label(for="input-image-job") Add Educational Institution Logo
-                img.file-input-first-image(src="images/image-video-image-file.png", alt="Add a file")
-                img#input-image-job(src="#", alt="Preview")
+                input.input-file#input-image-education(type="file", accept="image/*", placeholder="Add image or video")
+                label(for="input-image-education") Add Educational Institution Logo
+                img.file-input-first-image.img-education(src="images/image-video-image-file.png", alt="Add a file")
+                img#input-image-education(src="#", alt="")
 
             .modal-inputs
 
