--- a/ethnode/webui/mixins/modals/new-modals/edit-job.jade
+++ b/ethnode/webui/mixins/modals/new-modals/edit-job.jade
@@ -18,10 +18,10 @@
         .modal-body
 
             .form-group
-                input.input-file#input-image-job(type="file", placeholder="Add image or video")
+                input.input-file#input-image-job(type="file", accept="image/*", placeholder="Add image or video")
                 label(for="input-image-job") Add Company's Logo
-                img.file-input-first-image(src="images/image-video-image-file.png", alt="Add a file")
-                img#input-image-job(src="#", alt="Preview")
+                img.file-input-first-image.img-job(src="images/image-video-image-file.png", alt="Add a file")
+                img#input-image-job(src="#", alt="")
 
             .modal-inputs
 
