--- a/ethnode/webui/styles/main.sass
+++ b/ethnode/webui/styles/main.sass
@@ -32,7 +32,6 @@ body header.main-header
     position: fixed
     width: 100%
     background-color: white
-    margin-top: -59px
     z-index: 20
     box-shadow: 1px 2px 3px 0 rgba(0, 0, 0, 0.1)
 
@@ -119,6 +118,29 @@ body header.main-header
 
 
 
+// MAIN PAGE (FILTERS AND GIGS) STYLES
+section.page-content
+
+    .container
+        padding-top: 100px
+
+        .filters
+
+
+            .filter
+                margin-bottom: 20px
+
+                p
+                    font-family: 'Roboto', sans-serif
+                    font-size: 16px
+                    font-weight: 700
+                    line-height: 1.29
+                    color: #4a4a4a
+                    margin: 0
+                    margin-bottom: 5px
+
+                label.mdl-checkbox
+                    margin-left: 15px
 
 
 
