--- a/ethnode/webui/mixins/modals/new-modals/add-job.jade
+++ b/ethnode/webui/mixins/modals/new-modals/add-job.jade
@@ -18,10 +18,9 @@
 
             .form-group
                 input.input-file#input-image-job(type="file", accept="image/*", placeholder="Add image or video")
-                //- input#hidden-img-input(type="hidden")
                 label(for="input-image-job") Add Company's Logo
-                img.file-input-first-image(src="images/image-video-image-file.png", alt="Add a file")
-                img#input-image-job(src="#", alt="Preview")
+                img.file-input-first-image.img-job(src="images/image-video-image-file.png", alt="Add a file")
+                img#input-image-job(src="#", alt="")
 
             .modal-inputs
 
