--- a/ethnode/webui/mixins/header.jade
+++ b/ethnode/webui/mixins/header.jade
@@ -27,6 +27,9 @@ header.main-header
             .collapse.navbar-collapse#navigation
 
                 ul.nav.navbar-nav.navbar-right.hidden-xs
+                    li.asset(style="margin-right: 25px; margin-top: 2px"): a(href="/ui/gigs.html") Gigs
+                    li.asset(style="margin-right: 50px; margin-top: 2px"): a(href="/ui/jobs.html") Jobs
+
                     li.asset#comment-navbar: a(href="")
                         i.icon-comment
                         .round-number: span 1
@@ -56,7 +59,7 @@ header.main-header
 
                     // Settings dropdown
                     ul.dropdown-menu(data-labelledby="settings-dropdown")
-                        li.view-profile: a(href="") View Profile
+                        li.view-profile: a(href="/ui") View Profile
                             i.material-icons account_box
 
                         li.settings: a(href="") Settings
