made the whole site SPA

--- a/ethnode/webui/styles/header.sass
+++ b/ethnode/webui/styles/header.sass
@@ -85,6 +85,10 @@ header .container nav
             li.asset
                 margin-top: -5px
 
+                &.text
+                    margin-right: 25px
+                    margin-top: 2px
+
                 ul.dropdown-menu
                     min-width: 155px
                     padding: 0
