--- a/ethnode/webui/index.jade
+++ b/ethnode/webui/index.jade
@@ -52,7 +52,7 @@ html(lang='en-US')
 
         // END of LINKS
 
-    body(style="margin-top: -59px")
+    body
 
         include mixins/modals/add-job
         include mixins/modals/edit-job
@@ -75,100 +75,21 @@ html(lang='en-US')
         include mixins/header
 
 
-        // Background image section, including a button with lock and unlock icons.
-        section.background-image
-            .button-prev: i.material-icons keyboard_arrow_left
-            .button-next: i.material-icons keyboard_arrow_right
-            .items
-                .item: img(src="images/background-road-different.png", alt="Building")
-                .item: img(src="images/background-buildings.png", alt="Building")
-                .item: img(src="images/background-downtown.png", alt="Building")
 
-        // This section is for your whole profile, including left and right sides, profile information and etc.
-        section.documentation
-
-            .container
-
-                // Profile information including profile image, current work, current city and state, skills and etc.
-                .profile-information-container.col-lg-4.col-md-4.col-sm-12.col-xs-12
-
-                    .profile-information.up
-
-                        // Profile header, including profile image, current work, city, state and two buttons.
-                        .profile-upper
-
-                            .profile-image.open-modal(open-modal="#edit-profile")
-                                img(src="", alt="")
-                                .text-on-image: p Change
-
-                            h2
-                            h5.profile-information-position
-                            p.location
-
-                            button.hire Hire ($X/hr)
-                            button.leave-msg Send Message
-
-                    .profile-information.middle
-
-                        // Profile description including a description about you. (dark-gray section)
-                        .profile-description
-                            p Profile's description.
-
-                    //- .profile-information.down
-
-                    //-     // Profile top skills and tools
-                    //-     .profile-bottom
-                    //-         p.skills-text Assimilated Skills
-                    //-             //- i.material-icons keyboard_arrow_down
-
-                    //-         .skills
-                    //-             // JSON data goes here.
-
-                    // Profile footer, including social media links.
-                    .profile-footer
-                        ul.list-inline
-                            li: a(href=""): i.icon-facebook
-                            li: a(href=""): i.icon-twitter
-                            li: a(href=""): i.icon-r-s-s
-                            li: a(href=""): i.icon-instagram
-                            li: a(href=""): i.icon-google
+        // Including {PROFILE} PAGE content
+        include mixins/pages/profile
 
 
-                // Profile documentation including jobs and education, stories, shout-outs and questions with answers
-                .col-lg-8.col-md-8.col-sm-12.col-xs-12.profile-documentation-full
 
-                    .profile-documentation.col-xs-12
+        // Including {GIGS} page content
+        include mixins/pages/gigs
 
-                        ul.nav.nav-tabs(role="tablist")
-                            li.active.timeline-li(role="presentation"): a(href="#gigs", aria-controls="gigs", role="tab", data-toggle="tab") Gigs
-                            li.timeline-li(role="presentation"): a(href="#portfolio", aria-controls="portfolio", role="tab", data-toggle="tab") Portfolio
-                            li.timeline-li(role="presentation"): a(href="#profile", aria-controls="profile", role="tab", data-toggle="tab") Profile
+        // Including {JOBS} page content
+        include mixins/pages/jobs
 
-                            li.dropdownButton
-                                button#addThings.mdl-button.mdl-js-button.mdl-button--icon: i.material-icons add
-                                ul.mdl-menu.mdl-menu--bottom-right.mdl-js-menu.mdl-js-ripple-effect(for="addThings")
-                                    li.mdl-menu__item.open-modal(open-modal="#add-portfolio") Add Portfolio Element
-                                    li.mdl-menu__item.open-modal(open-modal="#add-job") Add Work Experience
-                                    li.mdl-menu__item.open-modal(open-modal="#add-education") Add Education
-                                    li.mdl-menu__item.open-modal(open-modal="#add-language") Add Language
-                                    li.mdl-menu__item.open-modal(open-modal="#add-skill") Add Skill
-                                    li.mdl-menu__item.open-modal(open-modal="#add-gig") Add Gig
+        // Including {PROFILES} page content
+        include mixins/pages/profiles
 
-
-                        // All the information about above listed tabs.
-                        .tab-content.col-xs-12
-
-                            // Gigs TAB
-                            .tab-pane.fade.in.active#gigs.col-xs-12(role="tabpanel")
-                                include mixins/tabs/gigs
-
-                            // Portfolio TAB
-                            .tab-pane.fade#portfolio.col-xs-12(role="tabpanel")
-                                include mixins/tabs/portfolio
-
-                            // Profile TAB
-                            .tab-pane.fade#profile.col-xs-12(role="tabpanel")
-                                include mixins/tabs/profile
 
 
         // jQuery 3.1.1
