--- a/ethnode/webui/mixins/header.jade
+++ b/ethnode/webui/mixins/header.jade
@@ -17,7 +17,7 @@ header.main-header
                 a.navbar-brand(href='').hidden-xs Ethearnal BETA
 
                 form(action="#" style="float: left; max-height: 62px;")
-                    .mdl-textfield.mdl-js-textfield.mdl-textfield--expandable.mdl-textfield--floating-label
+                    .mdl-textfield.mdl-js-textfield.mdl-textfield--expandable.mdl-textfield--floating-label.navigation-search-bar
                         label.mdl-button.mdl-js-button.mdl-button--icon(for="search-header"): i.material-icons search
                         .mdl-textfield__expandable-holder
                             input#search-header.mdl-textfield__input(type="text")
@@ -27,8 +27,9 @@ header.main-header
             .collapse.navbar-collapse#navigation
 
                 ul.nav.navbar-nav.navbar-right.hidden-xs
-                    li.asset(style="margin-right: 25px; margin-top: 2px"): a(href="/ui/gigs.html") Gigs
-                    li.asset(style="margin-right: 50px; margin-top: 2px"): a(href="/ui/jobs.html") Jobs
+                    li.asset.text: a(href="", load="gigs") Gigs
+                    li.asset.text: a(href="", load="jobs") Jobs
+                    li.asset.text: a(href="", load="profiles") Profiles
 
                     li.asset#comment-navbar: a(href="")
                         i.icon-comment
@@ -59,7 +60,7 @@ header.main-header
 
                     // Settings dropdown
                     ul.dropdown-menu(data-labelledby="settings-dropdown")
-                        li.view-profile: a(href="/ui") View Profile
+                        li.view-profile: a(href="", load="profile") View Profile
                             i.material-icons account_box
 
                         li.settings: a(href="") Settings
